--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,4 @@
 //start coding by removing this file and adding yours ;)
-@import "wcs";
+@import "navbar";
+@import "footer";
 @import "bootstrap/scss/bootstrap";
