--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -1,4 +1,6 @@
 <footer class="footer-lw">
+<ul class="footer-list">
 <li class="footer-li">A propos</li>
 <li class="footer-li">Mentions légales</li>
+</ul>
 </footer>
