--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -12,10 +12,10 @@
 <nav class="navbar">
   <div class="container-fluid container-navbar">
     <button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.png') }}">
+      <img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.svg') }}">
     </button>
     <img src="{{ asset('build/images/AFAC.png') }}">
-    <img src="{{ asset('build/images/user.png') }}" width="95">
+    <img class="user-icon" src="{{ asset('build/images/user.svg') }}">
   </div>
 </nav>
 </div>
