--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -14,8 +14,8 @@
     <button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.png') }}">
     </button>
-    <img src="{{ asset('build/images/AFAC.png') }}">
-    <img src="{{ asset('build/images/user.png') }}" width="95">
+    <a href="{{ path('home_') }}"><img src="{{ asset('build/images/AFAC.png') }}"></a>
+    <img src="{{ asset('build/images/user.png') }}">
   </div>
 </nav>
 </div>
