fixed route about us in footer

--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -1,4 +1,4 @@
 <footer class="footer-lw">
 <li class="footer-li">A propos</li>
-<a href=" {{ path('home_a_propos') }}"><li class="footer-li">Mentions légales</li></a>
+<a href=" {{ path('home_about_us') }}"><li class="footer-li">Mentions légales</li></a>
 </footer>
