--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -14,7 +14,7 @@
     <button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.svg') }}">
     </button>
-    <img src="{{ asset('build/images/AFACv2.png') }}">
+    <img src="{{ asset('build/images/AFAC.png') }}">
     <img class="user-icon" src="{{ asset('build/images/user.svg') }}">
   </div>
 </nav>
