--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/pill-gothic-600mg');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import "navbar";
 @import "accueil";
 @import "footer";
