artwork page base layout

--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="mt-auto footer-lw">
 <ul class="mb-0 d-flex flex-row align-items-center footer-list">
 <li class="footer-li">A propos</li>
-<a href=" {{ path('home_about_us') }}"><li class="footer-li">Mentions légales</li></a>
+<a class="text-decoration-none" href=" {{ path('home_about_us') }}"><li class="footer-li">Mentions légales</li></a>
 </footer>
