--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -2,7 +2,7 @@
 	<div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
 		<div>
 			<ul class="list-group list-group-flush">
-				<li>Notre galerie</li>
+				<a href="{{ path('home_gallery') }}"><li>Notre galerie</li></a>
 				<li>Nos artistes</li>
 				<li>Contact</li>
 				<li>Newsletter</li>
@@ -14,7 +14,7 @@
 			<button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 				<img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.svg') }}">
 			</button>
-			<img src="{{ asset('build/images/AFAC.png') }}">
+			<a href="{{ path('home_index') }}"><img src="{{ asset('build/images/AFAC.png') }}"></a>
 			<a href="{{ path('app_login')}}">
 				<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
 				<p>
