added missing informations

--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -24,13 +24,32 @@
                 posuere sem, eu porttitor sapien ex et tortor. In varius, massa at maximus ultrices, felis risus cursus 
                 magna, ac placerat libero erat sit amet felis. Integer suscipit leo scelerisque luctus rutrum.</p>
 
-            <h3 class="mt-5">Dimensions</h3>
+            <div class="row">
+                <div class="col">
+                    <h3 class="mt-5">Artiste</h3>
 
-            <p class="pe-3">70x70cm</p>
+                    <p class="pe-3">Chaïma Assani</p>    
+                </div>
+                <div class="col">
+                    <h3 class="mt-5">Année</h3>
 
-            <h3 class="mt-5">Artiste</h3>
+                    <p class="pe-3">2015</p>
+                </div>
+            </div>
 
-            <p class="pe-3">Chaïma Assani</p>
+            <div class="row">
+                <div class="col">
+                    <h3 class="mt-5">Technique</h3>
+
+                    <p class="pe-3">Aquarelle</p>
+                </div>
+                <div class="col">
+                    <h3 class="mt-5">Dimensions</h3>
+
+                    <p class="pe-3">70x70cm</p>
+                </div>
+            </div>
+
 
         </div>
 
