--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -15,17 +15,13 @@
 				<img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.svg') }}">
 			</button>
 			<a href="{{ path('home_index') }}"><img src="{{ asset('build/images/AFAC.png') }}"></a>
-			<a href="{{ path('app_login')}}">
-				<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
-				<p>
-					{% if app.user %}
-						{{ app.user.email }}
-						<a class="nav-link" href="{{ path('app_logout')}}">Logout</a>
-					{% else %}
-						<a class="nav-link" href="{{ path('app_login')}}">Login</a>
-					{% endif %}
-				</p>
-			</a>
+				{% if app.user %}
+					{{ app.user.email }}
+					<a class="nav-link" href="{{ path('app_logout')}}">Logout</a>
+				{% else %}
+					<a class="nav-link" href="{{ path('app_login')}}"><img class="nav-link" src="{{ asset('build/images/user.svg') }}"></a>
+				{% endif %}
+				
 		</div>
 	</nav>
 </div>
