--- a/templates/home/gallery.html.twig
+++ b/templates/home/gallery.html.twig
@@ -6,11 +6,16 @@
 <h1 class="p-3 d-flex justify-content-center">Notre galerie</h1>
     <div class="mb-4 container border-general">
         <div class="row">
-            {% for i in 0..8 %}
+            {% for artwork in artworks %}
             <div class="col-4">
                 <div class="m-3 card">
-                    <img src="{{ asset('build/images/darksanta.png') }}" alt="darksanta">
-                    <h2 class="pt-2 text-center"> Le boss du game</h2>
+                    <img src="/uploads/artwork/{{ artwork.picture }}" alt="{{artwork.title}}">
+                    <h2 class="pt-2 text-center"> {{artwork.title}}</h2>
+                    
+                    <p class="mx-auto">
+                        <a href="{{ path('artwork_show', {id:artwork.id})}}"><img class="know-more" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
+                    </p>
+                    
                 </div>
             </div>
             {% endfor %}
