--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -27,7 +27,7 @@
                 <div class="col">
                     <h3 class="mt-5">Année</h3>
 
-                    <p class="pe-3">2015</p>
+                    <p class="pe-3">{{artwork.year}}</p>
                 </div>
             </div>
 
