--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier vos informations personnelles
+{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+	<h1>Mon compte</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+	{{ include('user/_delete_form.html.twig') }}
 {% endblock %}
