--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1>User index</h1>
+	<h1>Index utilisateur</h1>
 
 	<table class="table">
 		<thead>
@@ -30,9 +30,7 @@
 					<td>
 						<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
 						<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-					</td>
-
-					{{ dump(user)}}
+					</td>²
 				</tr>
 			{% else %}
 				<tr>
