--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}New User
+{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+	<h1>Créer votre compte</h1>
 
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
+	{{ include('user/_form.html.twig') }}
+	<form>
+		<a class="btn btn-lg btn-primary" href="{{ path('app_user_index') }}">Retour à la page de connexion</a>
+	</form>
 {% endblock %}
