--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -8,21 +8,10 @@
 
 	<table class="table">
 		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ user.id }}</td>
-			</tr>
+
 			<tr>
 				<th>Email</th>
 				<td>{{ user.email }}</td>
-			</tr>
-			<tr>
-				<th>Roles</th>
-				<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-			</tr>
-			<tr>
-				<th>Password</th>
-				<td>{{ user.password }}</td>
 			</tr>
 			<tr>
 				<th>Name</th>
@@ -35,8 +24,8 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('home_index') }}">Retour à la page d'accueil</a>
-	<a href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier mes informations personnelles</a>
+	<a class="btn btn-lg btn-primary" href="{{ path('home_index') }}">Retour à la page d'accueil</a>
+	<a class="btn btn-lg btn-primary" href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier mes informations personnelles</a>
 
 	{{ include('user/_delete_form.html.twig') }}
 {% endblock %}
