--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,7 +1,6 @@
 {{ form_start(form) }}
 
 <button class="btn btn-lg btn-primary">
-	{{ button_label|default('Save') }}
+	{{ button_label|default('Créer mon compte') }}
 </button>
 {{ form_end(form) }}
-{{ dump(user)}}
