--- a/templates/user/emailEdit.html.twig
+++ b/templates/user/emailEdit.html.twig
@@ -1,5 +1,6 @@
 <h1>Bonjour !</h1>
 
-<p>Vos informations personnemmes ont bien été mis à jour</p>
+<p>
+	Afac 974 vous informes que vos informations personnelles ont bien été mis à jour</p>
 
 <p>Bonne journée !</p>
