all artwork crud

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="{{ path("admin_show_users") }}">Gestion des utilisateurs</a></li>
             <li><a href="{{ path("admin_show_artists") }}">Gestion des Artistes</a></li>
+            <li><a href="{{ path("admin_show_artworks") }}">Gestion des Oeuvres</a></li>
             <li><a href="{{ path("admin_show_contacts") }}">Gestion des demandes spécifiques</a></li>
         </ul>
 
