--- a/templates/artwork/new.html.twig
+++ b/templates/artwork/new.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
 <div class="container mt-5 border-general p-5">
     {{ form_start(form) }}
-    {{ form_widget(form, {attr: {'class': 'our-form'}}) }}
+    {{ form_widget(form) }}
     <div class="d-grid col-6 mx-auto bouton-general">
-    <button class=" btn btn-primary" type="submit">Ajouter une oeuvre</button>
+    <button class=" btn btn-primary" type="submit">Ajouter une image</button>
     </div>
     {{ form_end(form) }}
 </div>
