--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -22,13 +22,17 @@
 				<img src="{{ asset('build/images/AFAC.png') }}">
 			</a>
 			{% if app.user %}
-				<a href="{{ path('app_user_show', {'id': app.user.id} )}}">
-					Mon compte
-				</a>
-				<a href="{{ path('app_logout')}}">
-					Déconnection
-				</a>
-
+			<div class="dropdown">
+				<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+					Mon Compte
+				</button>
+				<ul class="dropdown-menu">
+					<li><a class="dropdown-item" href="{{ path('app_user_show', {'id': app.user.id} )}}">Mes informations</a></li>
+					<li><a class="dropdown-item" href="#">Mes favoris</a></li>
+					<li><a class="dropdown-item" href="{{ path('app_logout')}}">Déconnexion</a></li>
+				</ul>
+				</div>
+			
 			{% else %}
 				<a href="{{ path('app_login')}}">
 					<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
