--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<button class="btn btn-lg btn-primary">
+	{{ button_label|default('Créer mon compte') }}
+</button>
 {{ form_end(form) }}
