"gestion des conflits , ajout de div"

--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -59,8 +59,8 @@
         <div class="col">
             <p><img class="favorite" src="{{ asset('build/images/brush.svg') }}"> Plus d'infos sur l'artiste</p>
         </div>
-
     </div>
+     <div class="container divider mt-5 mb-5">&nbsp;</div>
 {% if comments is not empty %}
     <h2>Commentaires</h2>
     <ul>
