--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,15 +19,8 @@
 	<body class="d-flex flex-column">
 
 		{% include 'include/_navbar.html.twig' %}
-
-		{% block body %}
-			{% if FlashConnection is defined %}
-				<div class="alert alert-success">
-					{{ FlashConnection }}
-				</div>
-			{% endif %}
-
-		{% endblock %}
+		{% include 'include/_addFlash.html.twig'%}
+		{% block body %}{% endblock %}
 
 		{% include 'include/_footer.html.twig' %}
 	</body>
