--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{# Remplacer par le nom de l'oeuvre en dynamique #}
-{% block title %}Oeuvre{% endblock %}
+{% block title %}{{artwork.title}}{% endblock %}
 
 {% block body %}
+
+{# Partie concernant l'oeuvre #}
 <h1 class="text-center mt-5">{{artwork.title}}</h1>
 
 <div class="container border-general mt-5 px-4">
@@ -43,13 +44,11 @@
                     <p class="pe-3">{{artwork.height}} x {{artwork.width}} cm</p>
                 </div>
             </div>
-
-
         </div>
-
     </div>
-
 </div>
+
+{#Ajout au favoris si l'utilisateur est connecté, plus d'infos sur l'artiste #}
 {% if app.user %}
 <div class="container pt-5">
     <div class="row">
@@ -65,6 +64,7 @@
         </div>
     </div>
 </div>
+{# Si non connecté, accès aux infos de l'artiste #}
 {% else %}
 <div class="container pt-5">
     <div class="row">
@@ -75,10 +75,13 @@
 </div>
 {% endif %}
 
+    {# Divider oeuvre et commentaires #}
      <div class="container divider mt-5 mb-5">&nbsp;</div>
-     
+
+{# Partie commentaires #}
+<div class="container">
+<h2>Commentaires</h2>
 {% if comments is not empty %}
-    <h2>Commentaires</h2>
     <ul>
         {% for comment in comments %}
             <li>
@@ -111,7 +114,8 @@
     </div>
     {{ form_end(form) }}
 {% else %}
-    <p>Connectez-vous pour ajouter un commentaire.</p>
+    <p class="mb-5">Connectez-vous pour ajouter un commentaire.</p>
 {% endif %}
+</div>
 </div>
 {% endblock %}
