fix css pâge login

--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-{#Ajout au favoris si l'utilisateur est connecté, plus d'infos sur l'artiste #}
+{#Ajout aux favoris si l'utilisateur est connecté, plus d'infos sur l'artiste #}
 {% if app.user %}
 <div class="container pt-5">
     <div class="row">
