fix css + contenu page accueil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,31 +9,35 @@
 
 <div class="container align-items-center accueil-container">
     <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris semper, sem vel vehicula placerat, elit 
-        nunc sollicitudin dolor, at fringilla justo tortor vel massa. Mauris id maximus sapien. Aliquam a ultricies
-        tellus, sed varius turpis. Aenean cursus mauris viverra lectus dictum tristique. Sed fringilla, sem et 
-        condimentum auctor, odio arcu volutpat erat, vel aliquet turpis nisi eget nibh. In sollicitudin scelerisque 
-        felis. Mauris ornare dictum tortor nec malesuada. Vivamus suscipit, ipsum eget tristique elementum, est neque 
-        posuere sem, eu porttitor sapien ex et tortor. In varius, massa at maximus ultrices, felis risus cursus 
-        magna, ac placerat libero erat sit amet felis. Integer suscipit leo scelerisque luctus rutrum.</p>
-        <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras venenatis a 
-        neque sit amet molestie. Phasellus laoreet, orci sed laoreet volutpat, quam metus pharetra erat, vitae 
-        lobortis eros sem id arcu. Phasellus efficitur sapien ac tortor accumsan, quis pellentesque tellus aliquam. 
-        Integer vitae est posuere, euismod risus in, dignissim augue. Aliquam rutrum leo diam, a sodales sem 
-        mattis in. In auctor luctus sagittis. Nam elit sapien, tincidunt lacinia varius et, eleifend at leo.</p>
-        <p>Etiam varius arcu quam, vitae hendrerit mi bibendum ut. Phasellus ullamcorper ligula dolor, sit amet 
-        condimentum risus vestibulum ut. In tortor nulla, lobortis id convallis gravida, feugiat at erat. Mauris 
-        ultrices arcu quis erat mattis, sed lobortis turpis laoreet. Vivamus interdum enim quam, et feugiat est 
-        interdum sed. Quisque rutrum arcu et sagittis sagittis. Morbi eget lorem nec magna ultricies dictum. Orci 
-        varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc placerat nec massa 
-        quis elementum. Donec orci velit, dignissim eu nunc ut, ullamcorper consectetur velit. Proin efficitur in 
-        orci quis tristique. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos 
-        himenaeos. Nulla eget ligula eu nisi maximus accumsan. Morbi urna nisl, maximus tincidunt consequat sed, 
-        porta ac ex. Fusce sagittis eget est eget pharetra. Vestibulum aliquam nisl nec euismod auctor.</p>
-        <p>Morbi elementum laoreet interdum. Nullam bibendum est eu placerat rutrum. Mauris quam lacus, efficitur
-         ultrices sagittis at, ultrices quis lorem. Cras ac felis feugiat lorem imperdiet sollicitudin quis ac 
-         dolor. In vel nisl eget eros viverra egestas. Quisque auctor nulla est, id bibendum eros mattis quis. 
-         Morbi semper dolor ultrices ex consequat cursus. Aliquam tempus elit tincidunt elit blandit iaculis.</p>
+        <h2 class="mt-5 mb-5 text-center">Bienvenue sur le site de l'AFAC974 - Association des Artistes des Régions d'Outre-Mer</h2>
+        <p class="mb-5">L'AFAC974 est bien plus qu'une simple association artistique. C'est un vibrant rassemblement de talents 
+        venant des régions d'outre-mer, unis par la passion de l'art et le désir de partager la richesse culturelle 
+        qui caractérise ces territoires exceptionnels.</p>
+
+        <div class="row border-general">
+        <div class="col">
+        <h4 class="mt-3 mb-3">Notre Mission</h4>
+        <p>Fondée sur l'idée que l'art transcende les frontières géographiques, l'AFAC974 s'engage à promouvoir et 
+        soutenir les artistes talentueux des régions d'outre-mer. Nous croyons en la diversité des expressions artistiques 
+        et nous nous efforçons de créer un espace où chaque voix artistique peut trouver son écho.</p>
+        </div>
+
+        <div class="col">
+        <h4 class="mt-3 mb-3">Explorez la Créativité d'Outre-Mer</h4>
+        <p>Plongez dans notre galerie en ligne pour découvrir une panoplie d'œuvres uniques qui captent l'essence même de la 
+        vie dans les régions d'outre-mer. Des couleurs vibrantes des Caraïbes aux paysages envoûtants de l'océan Indien, nos 
+        artistes transmettent l'âme de leurs terres à travers des toiles, des sculptures, des photographies et bien plus encore.</p>
+        </div>
+        </div>
+
+        <div class="mt-5"></div>
+
+        <h4 class="mt-5 mb-3">Soutenez l'Art, Soutenez la Culture</h4>
+        <p>En encourageant et en acquérant les œuvres présentées sur notre site, vous contribuez directement à la vitalité 
+        culturelle des régions d'outre-mer. L'AFAC974 est fière de servir de pont entre les artistes talentueux et les amateurs 
+        d'art du monde entier, favorisant ainsi l'échange culturel et la reconnaissance des créateurs d'exception.</p>
+        <p>Explorez, appréciez et soutenez l'art d'outre-mer avec l'AFAC974. Ensemble, construisons un monde où la créativité transcende les distances.</p>
+        <p class="text-center mt-5 mb-5">Bienvenue dans notre communauté artistique !</p>
     </div>
     <div class="row border-general">
         <div class="col">
@@ -118,7 +122,7 @@
         </div>
     </div>
     <a href="{{ path('home_gallery') }}">
-    <div class="d-grid col-6 mx-auto bouton-general">
+    <div class="d-grid col-4 mx-auto bouton-general mt-5 mb-3">
         <button class="btn btn-primary" type="button">Notre galerie</button>
     </div>
     </a>
