--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -13,6 +13,7 @@
 			</ul>
 		</div>
 	</div>
+	
 	<nav class="navbar">
 		<div class="container-fluid container-navbar">
 			<button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,6 +22,7 @@
 			<a href="{{ path('home_index')}}">
 				<img src="{{ asset('build/images/AFAC.png') }}">
 			</a>
+
 			{% if app.user %}
 			<div class="dropdown">
 				<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -29,15 +31,21 @@
 				<ul class="dropdown-menu">
 					<li><a class="dropdown-item" href="{{ path('app_user_show', {'id': app.user.id} )}}">Mes informations</a></li>
 					<li><a class="dropdown-item" href="{{ path('artwork_show_favorites')}}">Mes favoris</a></li>
+					{% if is_granted('ROLE_ADMIN') %}
+					<li><a class="dropdown-item" href="{{ path('admin_app_dashboard')}}">Dashboard</a></li>
+					{% elseif is_granted('ROLE_ARTIST') %}
+					<li><a class="dropdown-item" href="{{ path('artwork_new')}}">Ajouter une oeuvre</a></li>
+					{% endif %}
 					<li><a class="dropdown-item" href="{{ path('app_logout')}}">Déconnexion</a></li>
 				</ul>
-				</div>
+			</div>
 			
 			{% else %}
 				<a href="{{ path('app_login')}}">
 					<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
 				</a>
 			{% endif %}
+
 		</div>
 	</nav>
 </div>
