--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -34,9 +34,9 @@
 
             <div class="row">
                 <div class="col">
-                    <h3 class="mt-5">Technique</h3>
+                    <h3 class="mt-5">Type</h3>
 
-                    <p class="pe-3">Aquarelle</p>
+                    <p class="pe-3">{{artwork.type}}</p>
                 </div>
                 <div class="col">
                     <h3 class="mt-5">Dimensions</h3>
