--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -36,7 +36,7 @@
                 <div class="col">
                     <h3 class="mt-5">Type</h3>
 
-                    <p class="pe-3">{{artwork.type}}</p>
+                    <p class="pe-3">{{artwork.type.name}}</p>
                 </div>
                 <div class="col">
                     <h3 class="mt-5">Dimensions</h3>
