ajout titre oublié

--- a/templates/home/gallery.html.twig
+++ b/templates/home/gallery.html.twig
@@ -3,7 +3,7 @@
 {% block title %} {{ parent() }} - Notre galerie {% endblock %}
 
 {% block body %}
-<h1 class="p-3 d-flex justify-content-center">Notre galerie</h1>
+<h1 class="p-3 d-flex justify-content-center mt-5 mb-5">Notre galerie</h1>
     <div class="mb-4 container border-general">
         <div class="row">
             {% for artwork in artworks %}
