--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,32 +41,32 @@
     </div>
     <div class="row border-general">
         <div class="col">
-            <div id="carouselExampleCaptions1" class="carousel slide">
+            <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item active" data-bs-interval="4000">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[0].picture) }}" class="d-block w-100" alt="{{artworks[0].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>{{artworks[0].title}}</h5>
+                    <p>{{artworks[0].description}}</p>
                 </div>
                 </div>
-                <div class="carousel-item">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item" data-bs-interval="3000">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[1].picture) }}" class="d-block w-100" alt="{{artworks[1].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>{{artworks[1].title}}</h5>
+                    <p>{{artworks[1].description}}</p>
                 </div>
                 </div>
-                <div class="carousel-item">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item" data-bs-interval="4000">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[2].picture) }}" class="d-block w-100" alt="{{artworks[2].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>{{artworks[2].title}}</h5>
+                    <p>{{artworks[2].description}}.</p>
                 </div>
                 </div>
             </div>
@@ -81,32 +81,32 @@
             </div>
         </div>
          <div class="col">
-            <div id="carouselExampleCaptions2" class="carousel slide">
+            <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item active" data-bs-interval="2500">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[0].picture) }}" class="d-block w-100" alt="{{artworks[0].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>{{artworks[0].title}}</h5>
+                    <p>{{artworks[0].description}}</p>
                 </div>
                 </div>
-                <div class="carousel-item">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item" data-bs-interval="3500">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[1].picture) }}" class="d-block w-100" alt="{{artworks[1].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>{{artworks[1].title}}</h5>
+                    <p>{{artworks[1].description}}</p>
                 </div>
                 </div>
-                <div class="carousel-item">
-                <img src="{{ asset('build/images/darksanta.png') }}" class="d-block w-100" alt="darksanta">
+                <div class="carousel-item" data-bs-interval="2500">
+                <img src="{{ asset('uploads/artwork/' ~ artworks[2].picture) }}" class="d-block w-100" alt="{{artworks[2].title}}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>{{artworks[2].title}}</h5>
+                    <p>{{artworks[2].description}}</p>
                 </div>
                 </div>
             </div>
