--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -4,16 +4,17 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Créer votre compte</h1>
-	<br>
+	<h1 class="pt-3 d-flex justify-content-center" >Créer votre compte</h1>
+	<div class="container">
 	<div id="fb-root"></div>
 	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v18.0&appId=897364282059711" nonce="Qet7h1QQ"></script>
 
-	<div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="" data-auto-logout-link="false" data-use-continue-as="true"></div>
-	<br>
+	<div class="fb-login-button p-3" data-width="" data-size="large" data-button-type="continue_with" data-layout="" data-auto-logout-link="false" data-use-continue-as="true"></div>
+	<div class="border-general mb-5">
 	{{ include('user/_form.html.twig') }}
-	<br>
 	<form>
-		<a class="btn btn-lg btn-primary" href="{{ path('app_user_index') }}">Retour à la page de connexion</a>
+		<a class="btn btn-lg btn-primary" href="{{ path('app_login') }}">Retour à la page de connexion</a>
 	</form>
+	</div>
+	</div>
 {% endblock %}
