changement img carrousel en dur

--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -25,8 +25,8 @@
 
 			{% if app.user %}
 			<div class="dropdown">
-				<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-					{{ app.user.name}} {{ app.user.lastname}}
+				<button class="btn btn-primary dropdown-toggle me-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+					{{ app.user.pseudonym}}
 				</button>
 				<ul class="dropdown-menu">
 					<li><a class="dropdown-item" href="{{ path('app_user_show', {'id': app.user.id} )}}">Mes informations</a></li>
