fix css bouton galerie

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -123,7 +123,7 @@
     </div>
     <a href="{{ path('home_gallery') }}">
     <div class="d-grid col-4 mx-auto bouton-general mt-5 mb-3">
-        <button class="btn btn-primary" type="button">Notre galerie</button>
+        <button class="btn btn-primary btn-font-plus" type="button">Notre galerie</button>
     </div>
     </a>
 </div>
