--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -8,7 +8,9 @@
 				<a href="{{ path('home_artists')}}">
 					<li>Nos artistes</li>
 				</a>
-				<li>Contact</li>
+				<a href="{{ path('app_contact')}}">
+					<li>Contact</li>
+				</a>
 				<li>Newsletter</li>
 			</ul>
 		</div>
