beaucoup de pagination et j'ai essayé de resoudre mon probleme d'édition et suppression oeuvre/artiste sans succès

--- a/templates/home/gallery.html.twig
+++ b/templates/home/gallery.html.twig
@@ -10,7 +10,7 @@
 
     
 {{ form_end(form) }}
-    </div>
+ {% if artworks|length > 0 %}
     <div class="mb-4 container border-general">
         <div class="row">
             {% for artwork in artworks %}
@@ -19,8 +19,8 @@
                     <img src="/uploads/artwork/{{ artwork.picture }}" alt="{{artwork.title}}">
                     <h2 class="pt-2 text-center"> {{artwork.title}}</h2>
                     
-                    <p class="mx-auto">
-                        <a href="{{ path('artwork_show', {id:artwork.id})}}"><img class="know-more" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
+                    <p class="mx-auto mt-1">
+                        <a href="{{ path('artwork_show', {id:artwork.id})}}"><img class="know-more px-1" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
                     </p>
                     
                 </div>
@@ -28,6 +28,11 @@
             {% endfor %}
         </div>
     </div>
+    {% else %}
+    <div class="d-flex mt-4 justify-content-center">
+        <p>Aucune oeuvre ne correspond à votre recherche.</p>
+    </div>
+    {% endif %}  
     <div class= 'd-flex justify-content-center'>
     {{ knp_pagination_render(artworks) }}
     </div>
