--- a/templates/admin/edit_artwork.html.twig
+++ b/templates/admin/edit_artwork.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="mx-auto pt-4">Modification de l'oeuvre "{{ artwork.getTitle() }}" par {{ artwork.artist.name}} {{ artwork.artist.lastname}}</h1>
     
-    <div class="container mx-auto border-general">
+    <div class="container mx-auto border-general mb-5">
     {{ form_start(form, {'attr': {'enctype': 'multipart/form-data'}}) }}
         {{ form_row(form.title) }}
         {{ form_row(form.artist) }}
