--- a/templates/home/artists.html.twig
+++ b/templates/home/artists.html.twig
@@ -3,26 +3,24 @@
 {% block title %} {{ parent() }} - Nos Artistes {% endblock %}
 
 {% block body %}
-<h1 class="p-3 d-flex justify-content-center mt-5 mb-5">Nos Artistes</h1>
+<h1 class="p-3 d-flex justify-content-center mt-5 ">Nos Artistes</h1>
     
-    {#<div class= 'd-flex justify-content-center'>
+    <div class= 'd-flex justify-content-center'>
     {{ form(form, {'attr': {'class': 'mx-auto'}}) }}
     </div>
-
-    
-{{ form_end(form) }} #}
-    </div>
+    {{ form_end(form) }} 
+    {% if artists|length > 0 %}
     <div class="mb-4 container border-general">
         <div class="row">
             {% for artist in artists %}
-            <div class="col-4">
+            <div class="col-6">
                 <div class="m-3 card">
                     <img src="/uploads/artistPhoto/{{ artist.poster }}" alt="{{artist.name}} {{artist.lastname}}">
                     <h2 class="pt-2 text-center">{{artist.name}} {{artist.lastname}}</h2>
                     
                     <p class="mx-auto">
                         {# compléter lien dès que les pages artistes son dispos#}
-                        <a href="#"><img class="know-more" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
+                        <a href="#"><img class="know-more px-1" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
                     </p>
                     
                 </div>
@@ -30,10 +28,14 @@
             {% endfor %}
         </div>
     </div>
-    {#
+    {% else %}
+    <div class="d-flex mb-4 justify-content-center">
+        <p>Aucun artiste ne correspond à votre recherche.</p>
+    </div>
+    {% endif %}  
     <div class= 'd-flex justify-content-center'>
     {{ knp_pagination_render(artists) }}
-    </div> #}
+    </div> 
 
 {% endblock %}
 
